# saber_joint_controller

./: README.md
install/: local_setup.sh  setup.sh
install/saber_control/share/saber_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/saber_py/share/saber_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/saber_control/: CMakeLists.txt
src/saber_control/include/: Cybergear_control.hpp  disturbance_observer.hpp  saber_get_regression.hpp
src/saber_control/src/: Cybergear_control.cpp  E_saber.xlsx  disturbance_observer.cpp  saber_fourier_series.xlsx  saber_get_regression.cpp  saber_gravity_compensation.cpp  saber_joint_controller.cpp  saber_min_param.xlsx  saber_statics_identification.cpp
src/saber_py/: package.xml  saber_accelerations.xlsx  saber_efforts.xlsx  saber_positions.xlsx  saber_velocities.xlsx  setup.cfg  setup.py
src/saber_py/saber_py/: param_identify_saber.py
